# amqp-rs

./: .rustfmt.toml  .travis.yml  LICENSE-MIT  README.md  search-index.js
amqp0/client/: Cargo.toml  README.md
amqp0/client/examples/: connect.rs
amqp0/client/src/: lib.rs
amqp0/client/src/channel/: mod.rs
amqp0/codegen/: Cargo.toml
amqp0/codegen/src/: domain.rs  lib.rs
amqp0/parser-nom/: Cargo.toml  build.rs
amqp0/parser-nom/pregen/: amqp8_0.rs  amqp9_0.rs  amqp9_1.rs  mod.rs  qpid8_0.rs  qpid9_0.rs  rabbitmq9_1.rs
amqp0/parser-nom/src/: common.rs  lib.rs
amqp0/primitives/: Cargo.toml  build.rs
amqp0/primitives/pregen/: amqp8_0.rs  amqp9_0.rs  amqp9_1.rs  message.rs  method.rs  mod.rs  qpid8_0.rs  qpid9_0.rs  rabbitmq9_1.rs
amqp0/primitives/src/: encodable.rs  lib.rs
amqp0/specs/: Cargo.toml  README.md  build.rs
amqp0/specs/examples/: dump.rs  find-different-classes.rs
amqp0/specs/pregen/: amqp8_0.rs  amqp9_0.rs  amqp9_1.rs  mod.rs  qpid8_0.rs  qpid9_0.rs  rabbitmq9_1.rs
amqp0/specs/src/: class.rs  lib.pregen.rs  lib.rs  spec.rs
amqp0/specs/xml/: amqp0-9-1.stripped.rabbitmq.xml
primitives/: Cargo.toml  build.rs
primitives/src/: amqp0_10.rs
primitives/src/amqp0/: mod.pregen.rs  mod.rs
xmlgen/: Cargo.toml
xmlgen/src/: lib.rs
xmlgen/src/amqp0/: mod.rs
xmlgen/src/common/: constant_group.rs  mod.rs
xmlspec/: Cargo.toml  build.rs  index.html  sidebar-items.js
xmlspec/amqp0_8_0/: constant.FRAME_END.html  constant.FRAME_MIN_SIZE.html  index.html  struct.Table.html
xmlspec/amqp0_8_0/class/: constant.CLASS_ACCESS.html  constant.CLASS_BASIC.html  constant.CLASS_CHANNEL.html  constant.CLASS_CONNECTION.html  constant.CLASS_DTX.html  constant.CLASS_EXCHANGE.html  constant.CLASS_FILE.html  constant.CLASS_QUEUE.html  constant.CLASS_STREAM.html  constant.CLASS_TEST.html  constant.CLASS_TUNNEL.html  constant.CLASS_TX.html  index.html  sidebar-items.js
xmlspec/amqp0_8_0/frame/: constant.TYPE_BODY.html  constant.TYPE_HEADER.html  constant.TYPE_HEARTBEAT.html  constant.TYPE_METHOD.html  constant.TYPE_OOB_BODY.html  constant.TYPE_OOB_HEADER.html  constant.TYPE_OOB_METHOD.html  constant.TYPE_TRACE.html  enum.Type.html  index.html
xmlspec/amqp0_8_0/response/: constant.REPLY_SUCCESS.html  enum.ErrorClass.html  enum.Type.html  index.html  trait.Error.html
xmlspec/amqp0_9_0/: constant.FRAME_END.html  constant.FRAME_MIN_SIZE.html  index.html  struct.Table.html
xmlspec/amqp0_9_0/class/: constant.CLASS_ACCESS.html  constant.CLASS_BASIC.html  constant.CLASS_CHANNEL.html  constant.CLASS_CONNECTION.html  constant.CLASS_DTX.html  constant.CLASS_EXCHANGE.html  constant.CLASS_FILE.html  constant.CLASS_MESSAGE.html  constant.CLASS_QUEUE.html  constant.CLASS_STREAM.html  constant.CLASS_TUNNEL.html  constant.CLASS_TX.html  index.html
xmlspec/amqp0_9_0/frame/: constant.TYPE_BODY.html  constant.TYPE_HEADER.html  constant.TYPE_HEARTBEAT.html  constant.TYPE_METHOD.html  constant.TYPE_OOB_BODY.html  constant.TYPE_OOB_HEADER.html  constant.TYPE_OOB_METHOD.html  constant.TYPE_TRACE.html  enum.Type.html  index.html  sidebar-items.js
xmlspec/amqp0_9_0/response/: constant.REPLY_SUCCESS.html  enum.ErrorClass.html  enum.Type.html  index.html  trait.Error.html
xmlspec/amqp0_9_1/: constant.FRAME_END.html  constant.FRAME_MIN_SIZE.html  index.html  struct.Table.html
xmlspec/amqp0_9_1/class/: constant.CLASS_BASIC.html  constant.CLASS_CHANNEL.html  constant.CLASS_CONNECTION.html  constant.CLASS_EXCHANGE.html  constant.CLASS_QUEUE.html  constant.CLASS_TX.html  index.html  sidebar-items.js
xmlspec/amqp0_9_1/frame/: constant.TYPE_BODY.html  constant.TYPE_HEADER.html  constant.TYPE_HEARTBEAT.html  constant.TYPE_METHOD.html  enum.Type.html  index.html
xmlspec/amqp0_9_1/response/: constant.REPLY_SUCCESS.html  enum.ErrorClass.html  enum.Type.html  index.html  trait.Error.html
xmlspec/protocols/: protocol.rs.jnj
xmlspec/qpid0_10_0/: constant.FRAME_END.html  constant.FRAME_MIN_SIZE.html  index.html  struct.Table.html
xmlspec/qpid0_10_0/class/: constant.CLASS_ACCESS.html  constant.CLASS_BASIC.html  constant.CLASS_CHANNEL.html  constant.CLASS_CONNECTION.html  constant.CLASS_DTX.html  constant.CLASS_EXCHANGE.html  constant.CLASS_FILE.html  constant.CLASS_MESSAGE.html  constant.CLASS_QUEUE.html  constant.CLASS_STREAM.html  constant.CLASS_TUNNEL.html  constant.CLASS_TX.html  index.html  sidebar-items.js
xmlspec/qpid0_10_0/frame/: constant.TYPE_BODY.html  constant.TYPE_HEADER.html  constant.TYPE_HEARTBEAT.html  constant.TYPE_METHOD.html  constant.TYPE_OOB_BODY.html  constant.TYPE_OOB_HEADER.html  constant.TYPE_OOB_METHOD.html  constant.TYPE_TRACE.html  enum.Type.html  index.html
xmlspec/qpid0_10_0/response/: constant.REPLY_SUCCESS.html  enum.ErrorClass.html  enum.Type.html  index.html  trait.Error.html
xmlspec/qpid0_8_0/: constant.FRAME_END.html  constant.FRAME_MIN_SIZE.html  index.html  struct.Table.html
xmlspec/qpid0_8_0/class/: constant.CLASS_ACCESS.html  constant.CLASS_BASIC.html  constant.CLASS_CHANNEL.html  constant.CLASS_CONNECTION.html  constant.CLASS_DTX.html  constant.CLASS_EXCHANGE.html  constant.CLASS_FILE.html  constant.CLASS_QUEUE.html  constant.CLASS_STREAM.html  constant.CLASS_TEST.html  constant.CLASS_TUNNEL.html  constant.CLASS_TX.html  index.html
xmlspec/qpid0_8_0/frame/: constant.TYPE_BODY.html  constant.TYPE_HEADER.html  constant.TYPE_HEARTBEAT.html  constant.TYPE_METHOD.html  constant.TYPE_OOB_BODY.html  constant.TYPE_OOB_HEADER.html  constant.TYPE_OOB_METHOD.html  constant.TYPE_TRACE.html  enum.Type.html  index.html
xmlspec/qpid0_8_0/response/: constant.REPLY_SUCCESS.html  enum.ErrorClass.html  enum.Type.html  index.html  sidebar-items.js  trait.Error.html
xmlspec/rabbitmq0_9_1/: constant.FRAME_END.html  constant.FRAME_MIN_SIZE.html  index.html  struct.Table.html
xmlspec/rabbitmq0_9_1/class/: constant.CLASS_BASIC.html  constant.CLASS_CHANNEL.html  constant.CLASS_CONFIRM.html  constant.CLASS_CONNECTION.html  constant.CLASS_EXCHANGE.html  constant.CLASS_QUEUE.html  constant.CLASS_TX.html  index.html  sidebar-items.js
xmlspec/src/: lib.rs
(+5007 files in other folders)
