[package]
name = "amql-xmlspec"
version = "0.0.1"
authors = ["Alexander Reece <github@reece45.com>"]
build = "build.rs"

[lib]
name = "amqp_xmlspec"
path = "src/lib.rs"

[features]
default = ["amqp", "0.9.1"]
all = []
all0 = []
amqp = []
rabbitmq = []
qpid = []
"0.9.1" = []
"0.9" = []
"0.8" = []

[build-dependencies]
env_logger = "0.3"
log = "0.3"

amqp-xmlgen = { path = "../xmlgen", version = "0.0.1" }
amqp-xmlparse = { path = "../xmlparse", version = "0.0.1" }

[build-dependencies.rustfmt]
version = "0.6.0"
optional = true

[build-dependencies.clippy]
version = "*"
optional = true

[dependencies.clippy]
version = "*"
optional = true