[package]
name = "amqp0-codegen"
authors = ["Alexander Reece <github@reece45.com>"]
version = "0.0.4"

[features]
default = []

[dependencies]
inflections = "1.0.0"
amqp0-specs = { version = "0.0.4", path = "../specs" }

[dependencies.clippy]
version = "*"
optional = true

[dependencies.rustfmt]
version = "0.6.2"
optional = true
