[package]
name = "amqp0-parser-nom"
version = "0.0.1"
authors = ["Alexander Reece <github@reece45.com>"]
# build = "build.rs"

[features]
default = ["lifeguard"]

[dependencies]
nom = "2.0.0"

[dependencies.amqp0-primitives]
path = "../primitives"

[dependencies.lifeguard]
version = "0.5.2"
optional = true

[build-dependencies.amqp0-specs]
path = "../specs"
optional = true

[build-dependencies.clippy]
version = "*"
optional = true

[build-dependencies.rustfmt]
version = "0.6.2"
optional = true