[package]
name = "amqp0-primitives"
version = "0.0.4"
authors = ["Alexander Reece <github@reece45.com>"]
build = "build.rs"

[features]
amqp0-pregen-primitives = ["amqp0-codegen", "amqp0-specs", "rustfmt"]
amqp0-build-primitives = ["amqp0-codegen", "amqp0-specs"]

[dependencies.clippy]
version = "*"
optional = true

[build-dependencies]
env_logger = "0.3.5"

[build-dependencies.amqp0-codegen]
path = "../codegen"
optional = true

[build-dependencies.amqp0-specs]
path = "../specs"
optional = true

[build-dependencies.clippy]
version = "*"
optional = true

[build-dependencies.rustfmt]
version = "0.6.2"
optional = true
