[package]
name = "amqp0-primitives"
version = "0.0.7"
authors = ["Alexander Reece <github@reece45.com>"]
build = "build.rs"

[features]
amqp0-pregen-primitives = ["amqp0-build-primitives", "rustfmt"]
amqp0-build-primitives = ["amqp0-codegen", "amqp0-specs"]
rustfmt = ["amqp0-codegen/rustfmt"]

[dependencies.clippy]
version = "*"
optional = true

[build-dependencies]
env_logger = "0.3.5"

[build-dependencies.amqp0-codegen]
path = "../codegen"
optional = true

[build-dependencies.amqp0-specs]
path = "../specs"
optional = true

[build-dependencies.clippy]
version = "*"
optional = true
