[package]
name = "amqp0-primitives"
version = "0.0.9"
authors = ["Alexander Reece <github@reece45.com>"]
build = "build.rs"

[features]
amqp0-pregen-primitives = ["amqp0-build-primitives", "amqp0-codegen/rustfmt"]
amqp0-build-primitives = ["amqp0-codegen", "amqp0-specs"]

[dependencies]
bit-vec = "0.4.3"
byteorder = "1.0.0"
cfg-if = "0.1.0"

[dependencies.clippy]
version = "*"
optional = true

[build-dependencies]
env_logger = "0.3.5"
phf = "0.7.20"

[build-dependencies.amqp0-codegen]
path = "../codegen"
optional = true

[build-dependencies.amqp0-specs]
path = "../specs"
optional = true

[build-dependencies.clippy]
version = "*"
optional = true
