[package]
name = "amqp0-specs"
version = "0.0.4"
authors = ["Alexander Reece <github@reece45.com>"]
build = "build.rs"

[features]
default = []
amqp0-build-specs = ["amqp0-specgen"]
amqp0-pregen-specs = ["amqp0-specgen", "rustfmt"]

[dependencies]

[dependencies.clippy]
version = "*"
optional = true

[build-dependencies]
env_logger = "0.3.5"

[build-dependencies.amqp0-specgen]
path = "../specgen"
optional = true

[build-dependencies.clippy]
version = "*"
optional = true

[build-dependencies.rustfmt]
version = "0.6.2"
optional = true
